# Sleep-States-Detect-MLOps

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  train.py
.dvc/: config
checkpoints/: best-checkpoint.ckpt.dvc
configs/: config.yaml
configs/data/: data.yaml
configs/data_infer/: data_infer.yaml
configs/data_load/: data_load.yaml
configs/data_preprocessing/: data_preprocessing.yaml
configs/data_train/: data_train.yaml
configs/dataset_params/: dataset_params.yaml
configs/download_data/: download_data.yaml
configs/file_names/: file_names.yaml
configs/model/: model.yaml
configs/model_params/: model_params.yaml
configs/train_params/: train_params.yaml
data/: base_data.csv.dvc  df_sub_with_pp.csv.dvc  df_sub_without_pp.csv.dvc  test_example.parquet.dvc  train_base_data.csv.dvc  train_data.npy.dvc  train_mask.csv.dvc  train_postprocessed_target.csv.dvc  train_target.csv.dvc
sleep_states_detect/: infer_pipeline.py  module.py  train_pipeline.py
sleep_states_detect/data_manage/: data_preprocessing.py  dataset.py  download_data.py  download_kaggle_data.py  dvc_load.py  load_data.py  prepare_data.py
sleep_states_detect/metrics/: compute_metric.py  find_peaks.py
sleep_states_detect/models/: unet1d.py  unet1d_lightning.py
sleep_states_detect/utils/: utils.py
