[project]
name = "sleep-states-detect-mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "protskii.sv@phystech.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "pytorch-lightning (>=2.5.1.post0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "polars (>=1.29.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torchinfo (>=1.8.0,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "dvc (>=3.59.2,<4.0.0)",
    "gdown (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]  # Совместимость с Black

[tool.isort]
profile = "black"
line_length = 88                  # Совместимость с Black
